# LP_AC

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  Planeamento.md  README.md  dconfig
assets/: table_married_two_holders.csv  table_married_unique_holder.csv  table_not_married.csv
data/: seg_social.csv  table_employees.csv  table_married_two_holders.csv  table_married_unique_holder.csv  table_not_married.csv  table_seg_social.csv
docs/: annotated.html  annotated_dup.js  calendar_8c_source.html  calendar_8h.html  calendar_8h.js  calendar_8h_source.html  classes.html  colors_8h.html  colors_8h.js  colors_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  employees_8c_source.html  employees_8h.html  employees_8h.js  employees_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  irs_8c.html  irs_8c_source.html  irs_8h.html  irs_8h.js  irs_8h_source.html  iss_8c_source.html  iss_8h.html  iss_8h.js  iss_8h_source.html  main_8c_source.html  menu_8c_source.html  menu_8h.html  menu_8h.js  menu_8h_source.html  navtreedata.js  (+35 more)
docs/html/: calendar_8h.html  calendar_8h_source.html  (+32 more)
src/: calendar.c  calendar.h  colors.h  employees.c  employees.h  error.c  error.h  file.c  file.h  h_error.c  h_error.h  irs.c  irs.h  iss.c  iss.h  main.c  main.h  menu.c  menu.h  path.h  paths.h  proc.c  proc.h  processing.c  processing.h  reports.c  reports.h  seg_social.c  seg_social.h  strs.h  table.c  table.h  util.c  util.h
(+63 files in other folders)
